contact align bugs fixed

--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,7 @@ header.sticky .nav-bar{
     margin-right: auto;
     padding: 4.3rem 2rem;
     display: flex;
-    justify-content: left;
+    justify-content: center;
 }
 
 .project-container{
@@ -515,15 +515,16 @@ header.sticky .nav-bar{
 /*  Contact  */
 
 .contact {
-    width: 100%;
+    max-width: 100%;
     position: relative;;
-    min-height: 90vh;
+    max-width: 1250px;
+    min-height: 100vh;
     margin-left: auto;
     margin-right: auto;
     padding: 4.3rem 2rem;
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
 }
 
 .contact-container{
@@ -532,13 +533,13 @@ header.sticky .nav-bar{
 
 .content-contact{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 .contact-container h2{
     color: var(--third-color);
-    font-size: 4em;
+    font-size: clamp(2.5rem, 8vw, 4rem);
     font-weight: 600;
     line-height: 100px;
     margin-bottom: 30px;
@@ -547,14 +548,14 @@ header.sticky .nav-bar{
 .my-contact-info h3{
     color: var(--third-color);
     line-height: 1.4;
-    font-size: 40px;
+    font-size: clamp(25px, 5vw, 40px);
     font-weight: 500;
     margin-bottom: 10px;
 }
 
 .my-contact-info p{
     color: var(--text-highlight-color);
-    font-size: 25px;
+    font-size: clamp(19px, 3vw, 25px);
     margin-bottom: 20px;
     margin-left: 70px;
 }
@@ -779,6 +780,8 @@ footer i{
 
 .contact .contact-container .content-contact{
     display: grid;
+    justify-content: center;
+    align-items: center;
     row-gap: 20px;
     width: 100%;
 }
